# cbft

./: .gitattributes  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  DESIGN-compaction.md  DESIGN.md  Dockerfile  IDEAS.md  LICENSE-thirdparty.txt  Makefile  README-dev.md  README.md  api_create_index.go  api_delete_index.go  audit.go  bindata_assetfs.go  bleve_config_default.go  bleve_forestdb.go  bleve_forestdb_default.go  bleve_gtreap.go  bleve_leveldb.go  bleve_metrics.go  bleve_mossStore_default.go  bucket_state.go  build_jm.go  c_heap_mem_usage.h  c_heap_mem_usage_linux.cpp  c_heap_mem_usage_mac.cpp  c_malloc.go  cache.go  cache_bleve.go  cache_test.go  cbauth.go  cfg.go  cfg_cb.go  cfg_mem.go  cfg_simple.go  cfg_simple_test.go  cfg_test.go  (+168 more)
admin-guide/: index.html
admin-guide/clustering/: index.html
admin-guide/command/: index.html
admin-guide/dependencies/: index.html
admin-guide/diagnosing/: index.html
admin-guide/index-management/: index.html
admin-guide/managing/: index.html
admin-guide/monitoring/: index.html
admin-guide/overview/: index.html
admin-guide/planning/: index.html
admin-guide/running/: index.html
api-guide/: index.html
api-ref/: index.html
bleve_gtreap/: bleve_gtreap.go
bleve_metrics/: bleve_metrics.go
cmd/: cbft-build-td  cbft_cbcollect_info_analyze  cbft_cbcollect_info_cookbook.md  main_cfg.go  main_cfg_test.go  main_uuid.go  main_uuid_test.go
cmd/cbft/: .gitignore  app_herder.go  cbftx.go  dump_windows.go  goverseer.go  grpc_flags.go  http_flags.go  init.go  init_bleve.go  init_cbauth.go  init_forestdb.go  init_grpc.go  init_http.go  init_mem.go  init_moss.go  init_serverless.go  init_serverless_test.go  log_fd.go  log_fd_unix.go  main.go  main_cfg.go  main_flags.go  main_test.go  memoryStats.go  memoryStats_standalone.go  moss_herder.go  register_cbauth.go  scorch_herder.go  servers.go  stack_dump.go  timeout_handler.go  tool.go  transport_credentials.go
cmd/cbft-bleve/: main.go
cmd/cbft-bleve-check/: main.go
cmd/cbft-bleve-dump/: main.go
cmd/cbft-bleve-query/: main.go
cmd/cbft_docs/: main.go
dev-guide/: index.html
dev-guide/advanced/: index.html
dev-guide/command/: index.html
dev-guide/concepts/: index.html
dev-guide/datasources/: index.html
dev-guide/defining/: index.html
dev-guide/index-definitions/: index.html
dev-guide/index-queries/: index.html
dev-guide/index-querying/: index.html
dev-guide/overview/: index.html
dev-guide/performance/: index.html
dev-guide/querying/: index.html
dev-guide/samples/: index.html
docs/: admin-guide.md  api-guide.md  api-ref.md  dev-guide.md  index.md  links.md
docs/admin-guide/: clustering.md  command.md  dependencies.md  diagnosing.md  index-management.md  managing.md  monitoring.md  overview.md  planning.md  running.md
docs/dev-guide/: advanced.md  command.md  concepts.md  datasources.md  defining.md  index-definitions.md  index-queries.md  overview.md  performance.md  querying.md  samples.md
docs/spec/advanced/: advanced.yaml
docs/spec/advanced/examples/: get-partition.json
docs/spec/index/: index.yaml
docs/spec/index/examples/: d-api-index-name-200.json  d-api-index-name-default.json  d-api-scoped-index-name-200.json  fts-sample-index-def-response.json  fts-sample-success-response-vector-search.json  fts-sample-success-response.json  g-api-index-name-count.json  g-api-index-name.json  g-api-index.json  g-api-scoped-indexes.json  g-api-scoped-status.json  g-api-stats-index-name-analyzeDoc-200.json  g-api-stats-index-name-analyzeDoc-body.json  g-api-stats-index-name.json  g-api-stats.json  p-api-index-name-200.json  p-api-index-name-default.json  run-search-payload.json  (+10 more)
docs/spec/manage/: manage.yaml
docs/spec/nodes/: nodes.yaml
docs/spec/query/: query.yaml
docs/spec/stats/: stats.yaml
empty/: go.mod
etc/: audit_descriptor.json  metrics_metadata.json
http/: debug.go  doc_count.go  doc_get.go  fields.go  index_get.go  index_list.go  registry.go  search.go  util.go
licenses/: BSL-Couchbase.txt
links/: index.html
mkdocs/: search_index.json
nope-not-a-dir/: index_meta.json  store
ns_server_static/: CMakeLists.txt  pluggable-ui-fts.json.in
ns_server_static/fts/: README.md  alert_dialog.html  codemirror-active-line.js  confirm_dialog.html  debug.js  fts.css  fts.js  fts_details.html  fts_easy_field.js  fts_easy_mapping.js  fts_easy_parse.js  fts_list.html  fts_new.html  fts_new_easy.html  fts_search.html  fts_view.html  head.frag.html  import_index.html  main.js
ns_server_static/fts/static/: directives.js  expvar.js  filters.js  index.js  query.js  util.js
ns_server_static/fts/uia/: fts.css  fts.js  fts_details.html  fts_list.html  fts_new.html  fts_search.html  fts_view.html  head.frag.html
protobuf/: README.md  search.pb.go  search.proto  search_grpc.pb.go
search_history/: api.go  handlers.go  io.go  io_encryption_test.go  reader.go  reader_test.go  sanitize.go  sanitize_test.go  types.go  writer.go  writer_test.go
static/: index.html
static/css/: app.css
static/js/: analysis.js  app.js  controllers.js  debug.js  directives.js  expvar.js  index.js  logs.js  manage.js  monitor.js  node.js  query.js  search.js  services.js
static/lib/: jsonpointer.js
static/lib/angular/: modal.js
static/lib/angular-treeview/: angular.treeview.css
static/lib/bootstrap/: ui-bootstrap-tpls-0.11.0.min.js
static/modal/: backdrop.html  window.html
static/partials/: debug-rows.html  debug.html  logs.html  manage.html  monitor.html
static/partials/analysis/: analysis.html
static/partials/index/: index.html  list.html  new.html  query-noresults.html  query-results.html  search-noresults.html  search-results.html  tab-layout.html  tab-manage.html  tab-mapping.html  tab-monitor.html  tab-query.html  tab-summary.html  tabs.html
static/partials/node/: list.html  node.html  tab-summary.html  tabs.html
static/tabs/: tabset.html
staticx/: index-ft.html  index.html
staticx/css/: cbft.css
staticx/js/: debug.js
staticx/partials/: debug-rows.html  debug.html
staticx/partials/index/: list.html  start.html
(+92 files in other folders)
